--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,10 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
-inputs:
-  myInput:              # change this
-    description: 'input description here'
-    default: 'default value if applicable'
+name: 'cargo-bloat'
+description: 'Track rust bloat across builds'
+author: 'orf'
+#inputs:
+#  myInput:
+#    description: 'input description here'
+#    default: 'default value if applicable'
 runs:
   using: 'node12'
   main: 'dist/index.js'
