--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "dependencies": {
     "@actions/core": "^1.2.0",
     "@actions/exec": "^1.0.2",
-    "@actions/io": "^1.0.1"
+    "@actions/github": "^2.0.0",
+    "@actions/io": "^1.0.1",
+    "axios": "^0.19.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.25",
