--- a/package.json
+++ b/package.json
@@ -26,21 +26,22 @@
   "author": "orf",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.0",
-    "@actions/exec": "^1.0.2",
-    "@actions/github": "^2.0.0",
-    "@actions/io": "^1.0.1",
+    "@actions/core": "^1.2.1",
+    "@actions/exec": "^1.0.3",
+    "@actions/github": "^2.0.1",
+    "@actions/io": "^1.0.2",
+    "@octokit/graphql": "^4.3.1",
     "axios": "^0.19.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.25",
     "@types/node": "^13.1.6",
-    "@typescript-eslint/parser": "^2.15.0",
     "@typescript-eslint/eslint-plugin": "^2.15.0",
-    "@zeit/ncc": "^0.21.0",
+    "@typescript-eslint/parser": "^2.15.0",
+    "@zeit/ncc": "^0.20.5",
     "eslint": "^6.8.0",
     "eslint-plugin-github": "^3.4.0",
-    "eslint-plugin-jest": "^23.3.0",
+    "eslint-plugin-jest": "^23.6.0",
     "jest": "^24.9.0",
     "jest-circus": "^24.9.0",
     "js-yaml": "^3.13.1",
