--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@actions/github": "^2.0.1",
     "@actions/io": "^1.0.2",
     "@octokit/graphql": "^4.3.1",
-    "axios": "^0.19.1"
+    "axios": "^0.19.1",
+    "filesize": "^6.0.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.25",
