--- a/rust_project/Cargo.toml
+++ b/rust_project/Cargo.toml
@@ -9,5 +9,5 @@ edition = "2018"
 [dependencies]
 serde = "1.0.104"
 serde_json = "1.0.44"
-reqwest = { version = "0.10", features = ["json"] }
+#reqwest = { version = "0.10", features = ["json"] }
 tokio = { version = "0.2", features = ["full"] }
