--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "lint": "eslint src/**/*.ts",
     "pack": "ncc build",
     "build-release": "npm run build && npm run pack",
-    "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run pack && npm test"
+    "all": "npm run build && npm run format && npm run lint && npm run pack"
   },
   "repository": {
     "type": "git",
@@ -39,18 +38,15 @@
   },
   "devDependencies": {
     "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.2",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "@zeit/ncc": "^0.22.0",
+    "@types/node": "^13.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "@zeit/ncc": "^0.21.1",
     "eslint": "^6.8.0",
     "eslint-plugin-github": "^3.4.1",
     "eslint-plugin-jest": "^23.8.2",
-    "jest": "^25.2.3",
-    "jest-circus": "^25.2.3",
     "js-yaml": "^3.13.1",
-    "prettier": "^2.0.2",
-    "ts-jest": "^25.2.1",
+    "prettier": "^1.19.1",
     "typescript": "^3.8.3"
   }
 }
