--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "lint": "eslint src/**/*.ts",
     "pack": "ncc build",
     "build-release": "npm run build && npm run pack",
-    "all": "npm run build && npm run format && npm run lint && npm run pack"
+    "all": "npm run build && npm run format && npm run lint && npm run pack",
+    "add-release": "git add dist/index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/orf/cargo-bloat-action.git"
   },
   "pre-commit": [
-    "build-release"
+    "build-release",
+    "add-release"
   ],
   "keywords": [
     "actions",
@@ -42,15 +44,15 @@
   },
   "devDependencies": {
     "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.0",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "@zeit/ncc": "^0.21.1",
+    "@types/node": "^13.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "@zeit/ncc": "^0.22.0",
     "eslint": "^6.8.0",
     "eslint-plugin-github": "^3.4.1",
     "eslint-plugin-jest": "^23.8.2",
     "js-yaml": "^3.13.1",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.2",
     "typescript": "^3.8.3"
   }
 }
