Include dependency trees

--- a/package.json
+++ b/package.json
@@ -34,15 +34,21 @@
     "@actions/exec": "^1.0.3",
     "@actions/github": "^2.1.1",
     "@actions/io": "^1.0.2",
-    "@types/handlebars-helpers": "^0.5.2",
-    "@types/text-table": "^0.2.1",
     "axios": "^0.19.2",
+    "diff": "^4.0.2",
     "filesize": "^6.1.0",
+    "lodash.set": "^4.3.2",
     "lodash.sortby": "^4.7.0",
-    "pre-commit": "^1.2.2",
-    "text-table": "^0.2.0"
+    "text-table": "^0.2.0",
+    "treeify": "^1.1.0"
   },
   "devDependencies": {
+    "@types/lodash.set": "^4.3.6",
+    "pre-commit": "^1.2.2",
+    "@types/diff": "^4.0.2",
+    "@types/handlebars-helpers": "^0.5.2",
+    "@types/text-table": "^0.2.1",
+    "@types/treeify": "^1.0.0",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.5",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
