--- a/rust_project/Cargo.toml
+++ b/rust_project/Cargo.toml
@@ -11,3 +11,5 @@ serde = "1.0.104"
 serde_json = "1.0.44"
 #reqwest = { version = "0.10", features = ["json"] }
 tokio = { version = "0.2", features = ["full"] }
+reqwest = { version = "0.10", features = ["json"] }
+futures = "0.3"
