--- a/rust_project/Cargo.toml
+++ b/rust_project/Cargo.toml
@@ -7,9 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1.0.104"
-serde_json = "1.0.44"
 #reqwest = { version = "0.10", features = ["json"] }
 tokio = { version = "0.2", features = ["full"] }
-reqwest = { version = "0.10", features = ["json"] }
-futures = "0.3"
+reqwest = { version = "0.10" }
+
