--- a/rust_project/Cargo.toml
+++ b/rust_project/Cargo.toml
@@ -9,5 +9,5 @@ edition = "2018"
 [dependencies]
 #reqwest = { version = "0.10", features = ["json"] }
 tokio = { version = "0.2", features = ["full"] }
-reqwest = { version = "0.10" }
+reqwest = { version = "0.10", features = ["json"] }
 
