--- a/rust_project/Cargo.toml
+++ b/rust_project/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#reqwest = { version = "0.10", features = ["json"] }
 tokio = { version = "0.2", features = ["full"] }
-reqwest = { version = "0.10" }
+ureq = "0.12.0"
 
