--- a/rust_project/Cargo.toml
+++ b/rust_project/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2018"
 
 [dependencies]
 tokio = { version = "0.2", features = ["full"] }
-ureq = "0.12.0"
+ureq = { version = "0.12.0", features = ["json"] }
 
