--- a/example_project_2/Cargo.toml
+++ b/example_project_2/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
 
 [dependencies]
-reqwest = { version = "0.10", features = ["json"] }
+ureq = { version = "0.12.0", features = ["json"] }
 futures = "0.3"
