--- a/example_project_2/Cargo.toml
+++ b/example_project_2/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust_project2"
+name = "test_project_2"
 version = "0.1.0"
 authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
