--- a/example_project_2/Cargo.toml
+++ b/example_project_2/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "test_project_2"
+name = "rust_project2"
 version = "0.1.0"
 authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
 
 [dependencies]
-ureq = { version = "0.12.0", features = ["json"] }
+reqwest = { version = "0.10", features = ["json"] }
 futures = "0.3"
