--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write **/*.ts",
-    "format-check": "prettier --check **/*.ts",
-    "lint": "eslint src/**/*.ts",
     "pack": "ncc build",
     "build-release": "npm run build && npm run pack",
-    "all": "npm run build && npm run format && npm run lint && npm run pack",
+    "all": "npm run build && && npm run pack",
     "add-release": "git add dist/index.js"
   },
   "repository": {
@@ -51,14 +48,8 @@
     "@types/treeify": "^1.0.0",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.2",
-    "@typescript-eslint/eslint-plugin": "^2.29.0",
-    "@typescript-eslint/parser": "^2.29.0",
     "@zeit/ncc": "^0.22.1",
-    "eslint": "^6.8.0",
-    "eslint-plugin-github": "^3.4.1",
-    "eslint-plugin-jest": "^23.8.2",
     "js-yaml": "^3.13.1",
-    "prettier": "^2.0.5",
     "typescript": "^3.8.3"
   }
 }
