--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "pack": "ncc build",
     "build-release": "npm run build && npm run pack",
-    "all": "npm run build && && npm run pack",
+    "all": "npm run build && npm run pack",
     "add-release": "git add dist/index.js"
   },
   "repository": {
