--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,10 @@ inputs:
     description: 'Github token to use'
     required: true
   bloat_args:
-    description: 'Custom args to pass to bloat'
+    description: 'Custom arguments to pass to cargo bloat'
+    required: false
+  tree_args:
+    description: 'Custom arguments to pass to cargo tree'
     required: false
 runs:
   using: 'node12'
