--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
   tree_args:
     description: 'Custom arguments to pass to cargo tree'
     required: false
+  by_function:
+    description: 'If set, display per-function bloat instead of per-crate bloat.'
+    required: false
 runs:
   using: 'node12'
   main: 'dist/index.js'
