--- a/lib_project/Cargo.toml
+++ b/lib_project/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust_project_ignored"
+name = "lib_project"
 version = "0.1.0"
 authors = ["Tom Forbes <tom@tomforb.es>"]
 edition = "2018"
