add exclude_packages to ci test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,3 +48,4 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           by_function: true
+          exclude_packages: "rust_project_ignored"
