--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@actions/exec": "^1.0.4",
     "@actions/github": "^4.0.0",
     "@actions/io": "^1.0.2",
+    "@actions/cache": "^1.0.7",
     "axios": "^0.20.0",
     "diff": "^4.0.2",
     "filesize": "^6.1.0",
